@@ -312,6 +312,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
                 if ( resvars.hasOwnProperty( k ) ) {
                     SpecTools.checkResultType( as, info, name, k, result[ k ] );
                     --rescount;
+                } else {
+                    delete result[k];
                 }
             }
 
