@@ -170,11 +170,17 @@ module.exports = ( spectools ) => {
                     }
 
                     if ( field_def.optional ) {
-                        res.push(
-                            `if ( !('${f}' in val) || ( val.${f} === null ) ) {`,
-                            ` val.${f} = null;`,
-                            `} else {`
-                        );
+                        if ( info._invoker_use ) {
+                            res.push(
+                                `if ( ('${f}' in val) && ( val.${f} !== null ) ) {`
+                            );
+                        } else {
+                            res.push(
+                                `if ( !('${f}' in val) || ( val.${f} === null ) ) {`,
+                                ` val.${f} = null;`,
+                                `} else {`
+                            );
+                        }
                     }
 
                     res.push( ...compileSubCheck( as, info, field_def.type, `val.${f}` ) );
