@@ -570,6 +570,14 @@ module.exports = ( spectools ) => {
                 if ( typeof fresult === 'string' ) {
                     finfo.expect_result = true;
                     checkKnownType( as, info, fresult );
+                } else if ( fresult instanceof Array ) {
+                    finfo.expect_result = true;
+
+                    for ( let rv of fresult ) {
+                        checkKnownType( as, info, rv );
+                    }
+
+                    Object.freeze( fresult );
                 } else if ( typeof fresult === 'object' ) {
                     for ( let rn in fresult ) {
                         if ( rn.match( PARAM_RE ) === null ) {
@@ -731,7 +739,18 @@ module.exports = ( spectools ) => {
                 const elemtype = tinfo.elemtype;
 
                 if ( elemtype ) {
-                    checkKnownType( as, info, elemtype );
+                    if ( typeof elemtype === 'string' ) {
+                        checkKnownType( as, info, elemtype );
+                    } else if ( elemtype instanceof Array ) {
+                        for ( let et of elemtype ) {
+                            checkKnownType( as, info, et );
+                        }
+
+                        Object.freeze( elemtype );
+                    } else {
+                        as.error( InternalError,
+                            `Invalid "elemtype" for custom type: ${t}` );
+                    }
                 }
 
                 // ---
