@@ -94,6 +94,20 @@ module.exports = ( spectools ) => {
     };
     let check_type_warned = false;
 
+    const checkSubType = ( info, type, val ) => {
+        if ( type instanceof Array ) {
+            for ( let t of type ) {
+                if ( _checkType( info, t, val ) ) {
+                    return true;
+                }
+            }
+
+            return false;
+        }
+
+        return _checkType( info, type, val );
+    };
+
     /**
      * Check if value matches required type (internal)
      * @private
@@ -197,7 +211,7 @@ module.exports = ( spectools ) => {
                         }
                     }
 
-                    if ( !_checkType( info, field_def.type, val[ f ] ) ) {
+                    if ( !checkSubType( info, field_def.type, val[ f ] ) ) {
                         ST.emit( 'error',
                             `Field "${f}" value "${val[ f ]}" mismatch for ${type_path}` );
 
@@ -211,7 +225,7 @@ module.exports = ( spectools ) => {
 
             if ( elemtype ) {
                 for ( let ft in val ) {
-                    if ( !_checkType( info, elemtype, val[ ft ] ) ) {
+                    if ( !checkSubType( info, elemtype, val[ ft ] ) ) {
                         ST.emit( 'error',
                             `Value "${val[ ft ]}" mismatch for ${type_path}` );
 
@@ -289,7 +303,7 @@ module.exports = ( spectools ) => {
             if ( elemtype ) {
                 for ( let i = 0; i < val_len; ++i ) {
                     // Note, new type stack
-                    if ( !_checkType( info, elemtype, val[ i ] ) ) {
+                    if ( !checkSubType( info, elemtype, val[ i ] ) ) {
                         ST.emit( 'error',
                             `Value "${val[ i ]}" mismatch for ${type_path}` );
 
